--- a/build.gradle
+++ b/build.gradle
@@ -13,6 +13,13 @@ dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8"
     implementation "com.github.javaparser:javaparser-symbol-solver-core:3.14.5"
     implementation "com.github.ajalt:clikt:2.0.0"
+    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.3.1'
+    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.3.1'
+    testCompile("org.assertj:assertj-core:3.11.1")
+}
+
+test {
+    useJUnitPlatform()
 }
 
 compileKotlin {
