--- a/build.gradle
+++ b/build.gradle
@@ -10,17 +10,17 @@ repositories {
 }
 
 dependencies {
-    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8"
-    implementation "com.github.javaparser:javaparser-symbol-solver-core:3.14.5"
-    implementation "com.github.ajalt:clikt:2.0.0"
-    
-    compile group: 'org.slf4j', name:'slf4j-api', version: '1.7.2'
-    compile group: 'ch.qos.logback', name:'logback-classic', version: '1.0.9'
-    compile group: 'ch.qos.logback', name:'logback-core', version: '1.0.9'
-    
+    compile "org.jetbrains.kotlin:kotlin-stdlib-jdk8"
+    compile "com.github.javaparser:javaparser-symbol-solver-core:3.14.5"
+    compile "com.github.ajalt:clikt:2.0.0"
+
+    compile group: 'org.slf4j', name: 'slf4j-api', version: '1.7.2'
+    compile group: 'ch.qos.logback', name: 'logback-classic', version: '1.0.9'
+    compile group: 'ch.qos.logback', name: 'logback-core', version: '1.0.9'
+
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.3.1'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.3.1'
-    testCompile("org.assertj:assertj-core:3.11.1")
+    testImplementation("org.assertj:assertj-core:3.11.1")
 }
 
 test {
@@ -39,13 +39,14 @@ sourceSets {
     test.java.srcDirs += 'src/test/kotlin/'
 }
 
-jar {
+task fatJar(type: Jar) {
     manifest {
         attributes 'Main-Class': 'de.wobkenh.pgen.PGenKt'
     }
-
+    baseName = 'pgen'
     // This line of code recursively collects and copies all of a project's files
     // and adds them to the JAR itself. One can extend this task, to skip certain
     // files or particular types at will
     from { configurations.compile.collect { it.isDirectory() ? it : zipTree(it) } }
+    with jar
 }
